# react-native-harmony-gesture-handler

./: .gitignore
react-native-gesture-handler/: .gitignore  package.json  tsconfig.build.json
react-native-gesture-handler/Swipeable/: index.ts
react-native-gesture-handler/harmony/: gesture_handler.har
react-native-gesture-handler/harmony/gesture_handler/: BuildProfile.ets  index.ets  oh-package-lock.json5  oh-package.json5
react-native-gesture-handler/scripts/: update-version.js
react-native-gesture-handler/src/: index.ts
react-native-gesture-handler/src/components/: GestureButtons.tsx
react-native-gesture-handler/src/handlers/: createHandler.tsx  gestureHandlerCommon.ts
react-native-harmony-gesture-handler/: .gitignore  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
react-native-harmony-gesture-handler/DrawerLayout/: index.ts
react-native-harmony-gesture-handler/harmony/: gesture_handler.har
react-native-harmony-gesture-handler/scripts/: deploy.js
react-native-harmony-gesture-handler/src/: GestureDetector.tsx  GestureHandlerRootView.tsx  RNGestureHandlerModule.ts  index.ts  index.tsx  init.ts
react-native-harmony-gesture-handler/src/components/: GestureComponents.tsx  GestureHandlerButton.tsx  (+2 more)
tester/: .gitignore  App.tsx  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
tester/harmony/: .build-profile.json5  .clang-format  .gitignore  oh-package-lock.json5  oh-package.json5
tester/harmony/entry/src/main/cpp/: .gitignore  CMakeLists.txt  PackageProvider.cpp
tester/harmony/gesture_handler/src/main/cpp/: CMakeLists.txt  GestureHandlerPackage.cpp  GestureHandlerPackage.h  RNGestureHandlerButtonComponentDescriptor.h  RNGestureHandlerModule.cpp  RNGestureHandlerModule.h  RNGestureHandlerRootViewComponentDescriptor.h  RNGestureHandlerRootViewJSIBinder.h
tester/harmony/gesture_handler/src/main/cpp/componentInstances/: RNGestureHandlerButtonComponentInstance.h  RNGestureHandlerRootViewComponentInstance.h
(+173 files in other folders)
